/** Defines a gRPC service that provides EDG compilation services.
    Interface to the HDL (eg, library fetch) is not included here.
*/
syntax = "proto3";
package edg.compiler;

import "schema.proto";
import "ref.proto";
import "lit.proto";


message CompilerRequest {
  repeated string modules = 1;
  schema.Design design = 2;

  message Refinement {
    oneof source {
      ref.LocalPath path = 1;
      ref.LibraryPath cls = 2;
    }
    ref.LibraryPath replacement = 3;
  }
  message Value {
    oneof source {
      ref.LocalPath path = 1;
      ref.LibraryPath cls = 2;
    }
    lit.ValueLit value = 3;
  }
  Refinement refinements = 3;
  Value values = 4;
}

message CompilerResult {
  oneof result {
    schema.Design design = 1;
    string error = 3;
  }

  message Value {
    ref.LocalPath path = 1;
    lit.ValueLit value = 2;
  }
  repeated Value solvedValues = 2;
}

service Compiler {
  rpc Compile (CompilerRequest) returns (CompilerResult) { }
}
